--- a/index.html
+++ b/index.html
@@ -4,10 +4,158 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Manrope:300,regular,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css">
   <title>MGS Aluminium</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__container">
+      <a href="#home"><img class="logo" src="./img/logo-light.png" alt="logo"></a>
+      <div class="lang-switcher">
+        <span class="en language-switcher"><a href="./english-version.html">EN</a></span>
+        <span class="ru language-switcher"><a href="./russian-version.html">RU</a></span>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="systems">
+      <div class="systems__container">
+        <div class="systems__content">
+          <h1 class="systems__title">Віконно-дверні системи Framex з алюмінію</h1>
+          <p class="systems__text">Ми пропонуємо комплекс професійних рішень для виробництва ексклюзивних світлопрозорих конструкцій</p>
+        </div>
+        <div class="systems__items items-systems">
+          <div class="systems__item systems-item">
+            <img src="./img/framex-10-window.jpg" alt="Framex 10" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex 10</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">1 камера</p>
+              <p class="characteristics__item">45 мм - монтажна глибина</p>
+              <p class="characteristics__item">холодна</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+          <div class="systems__item systems-item">
+            <img src="./img/framex-38-window.jpg" alt="Framex 38" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex 38</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">1 камера</p>
+              <p class="characteristics__item">38 мм - монтажна глибина</p>
+              <p class="characteristics__item">холодна</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+          <div class="systems__item systems-item">
+            <img src="./img/framex-46-window.jpg" alt="Framex 46" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex 46</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">1 камера</p>
+              <p class="characteristics__item">46 мм - монтажна глибина</p>
+              <p class="characteristics__item">холодна</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+          <div class="systems__item systems-item">
+            <img src="./img/framex-46m.jpg" alt="Framex 46M" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex 46M</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">1 камера</p>
+              <p class="characteristics__item">45 мм - монтажна глибина</p>
+              <p class="characteristics__item">холодна</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+          <div class="systems__item systems-item">
+            <img src="./img/framex-ft69-window.jpg" alt="Framex FT69" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex FT69</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">3 камери</p>
+              <p class="characteristics__item">69 мм - монтажна глибина</p>
+              <p class="characteristics__item">тепла</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+          <div class="systems__item systems-item">
+            <img src="./img/framex-ft72-window.jpg" alt="Framex FT72" class="systems-item__image">
+            <a href="#"><h3 class="systems-item__title">Framex FT72</h3></a>
+            <div class="systems-item__characteristics characteristics">
+              <p class="characteristics__item">3 камери</p>
+              <p class="characteristics__item">72 мм - монтажна глибина</p>
+              <p class="characteristics__item">тепла</p>
+            </div>
+            <a href="#" class="systems-item__button">Детальніше</a>
+          </div>
+        </div>
+        <!-- <div class="systems__slider slider-systems">
+          <div class="slider-systems__items">
+            <div class="slider-systems__item slider-item">
+              <img src="./img/01-window.jpg" alt="Framex 46" class="slider-item__image">
+              <div class="slider-item__content">
+                <div class="slider-item__text">
+                  <h3 class="slider-item__title">Framex 46</h3>
+                  <p class="slider-item__text">Холодна віконно-дверна система, яка призначена для виготовлення вікон, дверей в неопалюваних приміщеннях або для створення внутрішніх перегородок в офісах, в комерційних будівлях або в житлових будівлях.</p>
+                </div>
+                <div class="slider-item__characteristics characteristics">
+                  <div class="characterictics__item item-characterictic">
+                    <p class="item-characterictic__name">Звукоізоляція</p>
+                    <div class="item-characteristic__range">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </div>
+                  <div class="characterictics__item item-characterictic">
+                    <p class="item-characterictic__name">Енергоефективність</p>
+                    <div class="item-characteristic__range">
+                      <span style="width: 0%"></span>
+                    </div>
+                  </div>
+                  <div class="characterictics__item item-characterictic">
+                    <p class="item-characterictic__name">Ціна</p>
+                    <div class="item-characteristic__range">
+                      <span style="width: 70%"></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-item__features">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-systems__switchers switchers">
+            <span class="switchers__switcher switcher-active"></span>
+            <span class="switchers__switcher"></span>
+            <span class="switchers__switcher"></span>
+            <span class="switchers__switcher"></span>
+            <span class="switchers__switcher"></span>
+          </div>
+        </div> -->
+      </div>
+    </section>
+  </main>
+  <footer class="contacts">
+    <div class="contacts__container">
+      <div class="contacts__text">
+        <h2 class="contacts__title text-light">Контакти</h2>
+      </div>
+      <div class="contacts__items">
+        <div class="contacts__item contacts-item">
+          <img src="img/viber-icon.svg" alt="viber" class="contacts-item__icon">
+          <h3>Viber</h3>
+          <p><a class="contacts-item__link"  href="viber://chat?number=%2B380930865450">+380 93 086 54 50</a><br><a class="contacts-item__link"  href="viber://chat?number=%2B380965200076">+380 96 520 00 76</a></p>
+        </div>
+        <div class="contacts__item contacts-item">
+          <img src="img/phone-icon.svg" alt="phone" class="contacts-item__icon">
+          <h3>Телефони</h3>
+          <p><a class="contacts-item__link" href="tel:+380930865450">+380 93 086 54 50</a><br><a class="contacts-item__link" href="tel:+380965200076">+380 96 520 00 76</a></p>
+        </div>
+        <div class="contacts__item contacts-item">
+          <img src="img/mail-icon.svg" alt="mail" class="contacts-item__icon">
+          <h3>Email</h3>
+          <p><a class="contacts-item__link" href="mailto:glass.solution54@gmail.com">glass.solution54@gmail.com</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
