add: separate systems pages

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <header class="header">
     <div class="header__container">
       <a href="#home"><img class="logo" src="./img/logo-light.png" alt="logo"></a>
-      <div class="lang-switcher">
-        <span class="en language-switcher"><a href="./english-version.html">EN</a></span>
-        <span class="ru language-switcher"><a href="./russian-version.html">RU</a></span>
+      <div class="lang-switchers">
+        <span class="en lang-switcher"><a href="./english-version.html">EN</a></span>
+        <span class="ru lang-switcher"><a href="./russian-version.html">RU</a></span>
       </div>
     </div>
   </header>
@@ -27,64 +27,66 @@
         </div>
         <div class="systems__items items-systems">
           <div class="systems__item systems-item">
-            <img src="./img/framex-10-window.jpg" alt="Framex 10" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex 10</h3></a>
+            <a href="./pages/framex-10.html">
+              <img src="./img/framex-10-window.jpg" alt="Framex 10" class="systems-item__image">
+            </a>
+            <a href="./pages/framex-10.html"><h3 class="systems-item__title">Framex 10</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">1 камера</p>
               <p class="characteristics__item">45 мм - монтажна глибина</p>
               <p class="characteristics__item">холодна</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-10.html" class="systems-item__button">Детальніше</a>
           </div>
           <div class="systems__item systems-item">
-            <img src="./img/framex-38-window.jpg" alt="Framex 38" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex 38</h3></a>
+            <a href="./pages/framex-38.html"><img src="./img/framex-38-window.jpg" alt="Framex 38" class="systems-item__image"></a>
+            <a href="./pages/framex-38.html"><h3 class="systems-item__title">Framex 38</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">1 камера</p>
               <p class="characteristics__item">38 мм - монтажна глибина</p>
               <p class="characteristics__item">холодна</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-38.html" class="systems-item__button">Детальніше</a>
           </div>
           <div class="systems__item systems-item">
-            <img src="./img/framex-46-window.jpg" alt="Framex 46" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex 46</h3></a>
+            <a href="./pages/framex-46.html"><img src="./img/framex-46-window.jpg" alt="Framex 46" class="systems-item__image"></a>
+            <a href="./pages/framex-46.html"><h3 class="systems-item__title">Framex 46</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">1 камера</p>
               <p class="characteristics__item">46 мм - монтажна глибина</p>
               <p class="characteristics__item">холодна</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-46.html" class="systems-item__button">Детальніше</a>
           </div>
           <div class="systems__item systems-item">
-            <img src="./img/framex-46m.jpg" alt="Framex 46M" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex 46M</h3></a>
+            <a href="./pages/framex-46-m.html"><img src="./img/framex-46m.jpg" alt="Framex 46M" class="systems-item__image"></a>
+            <a href="./pages/framex-46-m.html"><h3 class="systems-item__title">Framex 46M</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">1 камера</p>
               <p class="characteristics__item">45 мм - монтажна глибина</p>
               <p class="characteristics__item">холодна</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-46-m.html" class="systems-item__button">Детальніше</a>
           </div>
           <div class="systems__item systems-item">
-            <img src="./img/framex-ft69-window.jpg" alt="Framex FT69" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex FT69</h3></a>
+            <a href="./pages/framex-FT-69.html"><img src="./img/framex-ft69-window.jpg" alt="Framex FT69" class="systems-item__image"></a>
+            <a href="./pages/framex-FT-69.html"><h3 class="systems-item__title">Framex FT69</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">3 камери</p>
               <p class="characteristics__item">69 мм - монтажна глибина</p>
               <p class="characteristics__item">тепла</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-FT-69.html" class="systems-item__button">Детальніше</a>
           </div>
           <div class="systems__item systems-item">
-            <img src="./img/framex-ft72-window.jpg" alt="Framex FT72" class="systems-item__image">
-            <a href="#"><h3 class="systems-item__title">Framex FT72</h3></a>
+            <a href="./pages/framex-FT-72.html"><img src="./img/framex-ft72-window.jpg" alt="Framex FT72" class="systems-item__image"></a>
+            <a href="./pages/framex-FT-72.html"><h3 class="systems-item__title">Framex FT72</h3></a>
             <div class="systems-item__characteristics characteristics">
               <p class="characteristics__item">3 камери</p>
               <p class="characteristics__item">72 мм - монтажна глибина</p>
               <p class="characteristics__item">тепла</p>
             </div>
-            <a href="#" class="systems-item__button">Детальніше</a>
+            <a href="./pages/framex-FT-72.html" class="systems-item__button">Детальніше</a>
           </div>
         </div>
         <!-- <div class="systems__slider slider-systems">
