--- a/pages/framex-46-m.html
+++ b/pages/framex-46-m.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Manrope:300,regular,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../css/item.css">
-  <title>Framex FT69</title>
+  <title>Framex 46M</title>
 </head>
 <body>
   <header class="header">
@@ -25,62 +25,49 @@
         <div class="characteristics__main">
           <div class="characterictics__cards">
             <div class="characteristics__card">
-              <h3 class="card__title">Віконний</h3>
-              <img src="../img/framex-ft69-window.jpg" alt="framex FT69 window" class="card__image">
-            </div>
-            <div class="characteristics__card">
-              <h3 class="card__title">Дверний</h3>
-              <img src="../img/framex-ft69-door.jpg" alt="framex FT69 door" class="card__image">
+              <img src="../img/framex-46m.jpg" alt="framex 46m" class="card__image card__image-big">
             </div>
           </div>
           <div class="characteristics__content">
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Кількість камер профілю</span>
-              <span class="item-characteristic__value">3</span>
+              <span class="item-characteristic__title">Монтажна глибина рами</span>
+              <span class="item-characteristic__value">46 мм</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Ширина термомоста</span>
-              <span class="item-characteristic__value">24 мм</span>
-            </div>
-            <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Перетин рами (монтажна глибина)</span>
-              <span class="item-characteristic__value">69 мм</span>
-            </div>
-            <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Перетин стулки</span>
-              <span class="item-characteristic__value">74 мм</span>
-            </div>
-            <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Стиковка штапика</span>
-              <span class="item-characteristic__value">стик в стик під прямим кутом</span>
+              <span class="item-characteristic__title">Монтажна глибина стулки</span>
+              <span class="item-characteristic__value">46 мм</span>
             </div>
             <div class="characteristics__item item-characteristic">
               <span class="item-characteristic__title">Система ущільнення притвору</span>
-              <span class="item-characteristic__value">триконтурна, EPDM</span>
+              <span class="item-characteristic__value">двоконтурна</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Опір теплопередачі</span>
-              <span class="item-characteristic__value">0,62 м²С/Вт</span>
+              <span class="item-characteristic__title">Скло</span>
+              <span class="item-characteristic__value">4, 6, 8, 10, 12 мм</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Товщина зовнішньої стінки</span>
-              <span class="item-characteristic__value">1,6 мм</span>
+              <span class="item-characteristic__title">Монтаж у фасадну систему</span>
+              <span class="item-characteristic__value">+</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Заповнення</span>
-              <span class="item-characteristic__value">склопакет</span>
+              <span class="item-characteristic__title">Матеріал ущільнення</span>
+              <span class="item-characteristic__value">EPDM</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Товщина заповнення конструкцій</span>
-              <span class="item-characteristic__value">22-46 мм</span>
+              <span class="item-characteristic__title">Сплав</span>
+              <span class="item-characteristic__value">6063</span>
             </div>
             <div class="characteristics__item item-characteristic">
-              <span class="item-characteristic__title">Коефіцієнт опору теплопередачі</span>
-              <span class="item-characteristic__value">1,6 W/m2K</span>
+              <span class="item-characteristic__title">Товщина склопакета</span>
+              <span class="item-characteristic__value">14-30 мм</span>
             </div>
             <div class="characteristics__item item-characteristic">
               <span class="item-characteristic__title">Колір профілів</span>
               <span class="item-characteristic__value">порошкове покриття <br>за шкалою RAL</span>
+            </div>
+            <div class="characteristics__item item-characteristic">
+              <span class="item-characteristic__title">Товщина стінки профілю</span>
+              <span class="item-characteristic__value">1,8 мм</span>
             </div>
             <p class="characteristics__specification">
               * Cистема забезпечена дренажно-вентиляційними отворами для відводу вологи і вентиляції
